[package]
name = "rust-blockchain"
version = "0.1.0"
authors = ["Abdul Rahman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockchainlib"
pah = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
hex = "0.4.2"
crypto-hash = "0.3.4"
